[gd_scene load_steps=49 format=1]

[ext_resource path="res://scripts/game/source/2/controlRoom/controlRobot.gd" type="Script" id=1]
[ext_resource path="res://assets/game/white.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/game/source/2/controlRoom/controlbg_new.png" type="Texture" id=4]
[ext_resource path="res://themes/text24.tres" type="Theme" id=5]
[ext_resource path="res://assets/game/source/2/casino/door.jpg" type="Texture" id=6]
[ext_resource path="res://assets/game/source/2/controlRoom/players_big.png" type="Texture" id=7]
[ext_resource path="res://assets/game/source/2/controlRoom/garbage_small.jpg" type="Texture" id=8]
[ext_resource path="res://assets/game/source/2/controlRoom/velo_small.png" type="Texture" id=9]
[ext_resource path="res://assets/game/source/2/controlRoom/blank100.jpg" type="Texture" id=10]
[ext_resource path="res://assets/game/source/2/controlRoom/cuteRobot.png" type="Texture" id=11]
[ext_resource path="res://themes/text30.tres" type="Theme" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.6857, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 98, 48 )

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 48, 48 )

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 103, 48 )

[sub_resource type="StyleBoxEmpty" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 48, 148 )

[sub_resource type="StyleBoxEmpty" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=16]

custom_solver_bias = 0.0
extents = Vector2( 48, 148 )

[sub_resource type="StyleBoxEmpty" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 48, 98 )

[sub_resource type="StyleBoxEmpty" id=20]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=21]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=22]

custom_solver_bias = 0.0
extents = Vector2( 48, 98 )

[sub_resource type="StyleBoxEmpty" id=23]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=24]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=25]

custom_solver_bias = 0.0
extents = Vector2( 103, 48 )

[sub_resource type="StyleBoxEmpty" id=26]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=27]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=28]

custom_solver_bias = 0.0
extents = Vector2( 48, 148 )

[sub_resource type="StyleBoxEmpty" id=29]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=30]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=31]

custom_solver_bias = 0.0
extents = Vector2( 48, 148 )

[sub_resource type="StyleBoxEmpty" id=32]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=33]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=34]

custom_solver_bias = 0.0
extents = Vector2( 48, 98 )

[sub_resource type="StyleBoxEmpty" id=35]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=36]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
modulate = Color( 0.27451, 0.411765, 0.6, 1 )
expand = true
stretch_mode = 0

[node name="riddleOverlay" parent="." instance=ExtResource( 3 )]

[node name="gameBg" type="Sprite" parent="."]

transform/pos = Vector2( 960, 600 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 425.0
margin/top = 402.0
margin/right = -425.0
margin/bottom = 280.0
text = "Aidez Victor à atteindre la porte en bougeant les gravats grâce aux robots !
Changer de gravats en cliquant dessus
Bouger les gravats avec les flèches"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Limit" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 964.934, 316.002 )
transform/scale = Vector2( 13.4442, 0.588721 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.46811, 0, 0, 3.20836, -2.48502, -92.1578 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 2.5362, 0, 0, 3.20836, -2.83147, 1055.35 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 1 )
shapes/2/transform = Matrix32( 0.163195, 0, 0, 17.8637, -25.639, 99.3667 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 1 )
shapes/3/transform = Matrix32( 0.163195, 0, 0, 16.9597, -31.9761, 403.117 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 1 )
shapes/4/transform = Matrix32( 0.458736, 0, 0, 4.46948, -28.6256, 534.85 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 1 )
shapes/5/transform = Matrix32( 0.464224, 0, 0, 4.46948, -28.6197, 253.478 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 1 )
shapes/6/transform = Matrix32( 0.163195, 0, 0, 22.7596, -25.674, 789.684 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 1 )
shapes/7/transform = Matrix32( 0.163195, 0, 0, 55.0085, 24.9742, 477.272 )
shapes/7/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="up" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -2.48502, -92.1578 )
transform/scale = Vector2( 2.46811, 3.20836 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="down" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -2.83147, 1055.35 )
transform/scale = Vector2( 2.5362, 3.20836 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="leftup" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -25.639, 99.3667 )
transform/scale = Vector2( 0.163195, 17.8637 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 2
__meta__ = {
"_edit_lock_": true
}

[node name="doorleft" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -31.9761, 403.117 )
transform/scale = Vector2( 0.163195, 16.9597 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 3
__meta__ = {
"_edit_lock_": true
}

[node name="doordown" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -28.6256, 534.85 )
transform/scale = Vector2( 0.458736, 4.46948 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 4
__meta__ = {
"_edit_lock_": true
}

[node name="doorup" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -28.6197, 253.478 )
transform/scale = Vector2( 0.464224, 4.46948 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 5
__meta__ = {
"_edit_lock_": true
}

[node name="leftdown" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( -25.674, 789.684 )
transform/scale = Vector2( 0.163195, 22.7596 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 6
__meta__ = {
"_edit_lock_": true
}

[node name="rightup" type="CollisionShape2D" parent="Limit"]

transform/pos = Vector2( 24.9742, 477.272 )
transform/scale = Vector2( 0.163195, 55.0085 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 7
__meta__ = {
"_edit_lock_": true
}

[node name="door" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 603.09, 557.476 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3.36083, 0, 0, 5.00805, -1.47129, -8.44635 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="door" type="Sprite" parent="door"]

transform/pos = Vector2( 0, -7.96657 )
transform/scale = Vector2( 0.79879, 0.684346 )
texture = ExtResource( 6 )

[node name="hitbox" type="CollisionShape2D" parent="door"]

transform/pos = Vector2( -1.47129, -8.44635 )
transform/scale = Vector2( 3.36083, 5.00805 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="blocs" type="Node2D" parent="."]

transform/pos = Vector2( 960, 600 )
__meta__ = {
"_edit_lock_": true
}

[node name="Victor" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 210, 52.5 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Victor"]

texture = ExtResource( 7 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Victor"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="ButtonVictor" type="Button" parent="blocs/Victor"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = -50.0
margin/right = 100.0
margin/bottom = 50.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Poubelle" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 262.5, -262.5 )
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Poubelle"]

texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Poubelle"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="ButtonPoubelle" type="Button" parent="blocs/Poubelle"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -50.0
margin/right = 50.0
margin/bottom = 50.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Poubelle2" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 265.03, -157.099 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Poubelle2"]

texture = ExtResource( 8 )

[node name="ButtonPoubelle" type="Button" parent="blocs/Poubelle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -50.0
margin/right = 50.0
margin/bottom = 50.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Poubelle2"]

shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="Velo" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 104.797, 160.518 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Velo"]

texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Velo"]

shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="ButtonVelo" type="Button" parent="blocs/Velo"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = -50.0
margin/right = 95.0
margin/bottom = 35.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle1" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( -263.126, -155.712 )
input/pickable = false
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle1"]

transform/scale = Vector2( 1, 3 )
texture = ExtResource( 10 )

[node name="Button1" type="Button" parent="blocs/Obstacle1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -150.0
margin/right = 50.0
margin/bottom = 150.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle1"]

shape = SubResource( 13 )
trigger = false
_update_shape_index = 0

[node name="Obstacle2" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 51.8373, -49.1429 )
input/pickable = false
shapes/0/shape = SubResource( 16 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle2"]

transform/scale = Vector2( 1, 3 )
texture = ExtResource( 10 )

[node name="Button2" type="Button" parent="blocs/Obstacle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -151.0
margin/right = 47.0
margin/bottom = 151.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle2"]

shape = SubResource( 16 )
trigger = false
_update_shape_index = 0

[node name="Obstacle3" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( -165.159, 209.785 )
input/pickable = false
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle3"]

transform/scale = Vector2( 1, 2 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle3"]

shape = SubResource( 19 )
trigger = false
_update_shape_index = 0

[node name="Button3" type="Button" parent="blocs/Obstacle3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -100.0
margin/right = 50.0
margin/bottom = 100.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle4" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( -48.912, 106.456 )
input/pickable = false
shapes/0/shape = SubResource( 22 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle4"]

transform/scale = Vector2( 1, 2 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle4"]

shape = SubResource( 22 )
trigger = false
_update_shape_index = 0

[node name="Button4" type="Button" parent="blocs/Obstacle4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -100.0
margin/right = 50.0
margin/bottom = 100.0
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 24 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle5" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( -209.369, 50.7304 )
input/pickable = false
shapes/0/shape = SubResource( 25 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -1 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle5"]

texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle5"]

transform/pos = Vector2( 0, -1 )
shape = SubResource( 25 )
trigger = false
_update_shape_index = 0

[node name="Button5" type="Button" parent="blocs/Obstacle5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -105.0
margin/top = -50.0
margin/right = 105.0
margin/bottom = 50.0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle6" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 52.3267, -262.921 )
transform/rot = -90.0
input/pickable = false
shapes/0/shape = SubResource( 28 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle6"]

transform/scale = Vector2( 1, 3 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle6"]

shape = SubResource( 28 )
trigger = false
_update_shape_index = 0

[node name="Button6" type="Button" parent="blocs/Obstacle6"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -150.0
margin/right = 50.0
margin/bottom = 150.0
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle7" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( 54.5181, 263.493 )
transform/rot = -90.0
input/pickable = false
shapes/0/shape = SubResource( 31 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle7"]

transform/scale = Vector2( 1, 3 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle7"]

shape = SubResource( 31 )
trigger = false
_update_shape_index = 0

[node name="Button7" type="Button" parent="blocs/Obstacle7"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -150.0
margin/right = 50.0
margin/bottom = 150.0
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Obstacle8" type="KinematicBody2D" parent="blocs"]

editor/display_folded = true
transform/pos = Vector2( -56.5318, -101.675 )
input/pickable = false
shapes/0/shape = SubResource( 34 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="blocs/Obstacle8"]

transform/scale = Vector2( 1, 2 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocs/Obstacle8"]

shape = SubResource( 34 )
trigger = false
_update_shape_index = 0

[node name="Button8" type="Button" parent="blocs/Obstacle8"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -100.0
margin/right = 50.0
margin/bottom = 100.0
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 36 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="cuteRobot" type="Sprite" parent="blocs"]

transform/pos = Vector2( 17.423, -47.474 )
transform/rot = -1.00999e-06
transform/scale = Vector2( 0.125483, 0.125478 )
z/z = 50
texture = ExtResource( 11 )

[node name="resetButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 12 )
margin/left = 810.0
margin/top = 980.0
margin/right = 1110.0
margin/bottom = 1025.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset"
flat = false

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_enter" from="door" to="." method="_on_Area2D_body_enter"]

[connection signal="pressed" from="blocs/Victor/ButtonVictor" to="." method="_on_ButtonVictor_pressed"]

[connection signal="pressed" from="blocs/Poubelle/ButtonPoubelle" to="." method="_on_ButtonPoubelle_pressed"]

[connection signal="pressed" from="blocs/Poubelle2/ButtonPoubelle" to="." method="_on_ButtonPoubelle2_pressed"]

[connection signal="pressed" from="blocs/Velo/ButtonVelo" to="." method="_on_ButtonVelo_pressed"]

[connection signal="pressed" from="blocs/Obstacle1/Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="blocs/Obstacle2/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="blocs/Obstacle3/Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="blocs/Obstacle4/Button4" to="." method="_on_Button4_pressed"]

[connection signal="pressed" from="blocs/Obstacle5/Button5" to="." method="_on_Button5_pressed"]

[connection signal="pressed" from="blocs/Obstacle6/Button6" to="." method="_on_Button6_pressed"]

[connection signal="pressed" from="blocs/Obstacle7/Button7" to="." method="_on_Button7_pressed"]

[connection signal="pressed" from="blocs/Obstacle8/Button8" to="." method="_on_Button8_pressed"]


